# xef

./: Cargo.toml  xef.json
src/: database.rs  lib.rs  main.rs  rustfmt.toml
src/model/: inventory.rs  item.rs  mod.rs  portion.rs
src/view/: item.rs  mod.rs  portion.rs  validation.rs
