[package]
name = "xef"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
web-sys = { version = "0.3.67" }
floem = { git = "https://github.com/lapce/floem.git" }
petgraph = { version = "0.6.5", features = ["serde", "serde_derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
# once_cell = "1.19.0"
im = "15.1.0"
indexmap = { version = "2.2.6", features = ["serde"] }
uom = { version = "0.36.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.117", features = ["alloc"] }
